# -DataGrab-

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  datagrab.example.yaml  pyproject.toml
docs/: ARCHITECTURE.md  TECHNICAL.md  USAGE.md  doctor-runbook.md
docs/tickterial_ops/: README.md
scripts/: cache_to_csv_xag.py  check_tickterial_outputs.py  repair_tickterial_xau.py  run_tickterial_10y.ps1  tickterial_csv_bridge.py  tickterial_mvp.py
src/datagrab/: cli.py  config.py  deps.py  fsutils.py  logging.py  rate_limiter.py  timeutils.py
src/datagrab/pipeline/: __init__.py  catalog.py  downloader.py  writer.py
src/datagrab/sources/: __init__.py  baostock_source.py  base.py  httpx_source.py  quantdb_source.py  router.py  tickterial_source.py  yfinance_source.py
src/datagrab/storage/: __init__.py  export.py  quality.py  schema.py  validate.py
src/datagrab/tickterial/: __init__.py  aggregate.py  bridge.py  check.py  common.py  download.py  exceptions.py  fetch.py  fetch_dukas.py  fetch_tickvault.py  repair.py  runner.py  symbols.py
src/datagrab/tui/: __init__.py  app.py  screens.py
src/datagrab/validation/: __init__.py  cli.py  config.py  failures.py
tests/: __init__.py  benchmark_performance.py  test_async_in_loop.py  test_backend_fallback_chain.py  test_catalog_filters.py  test_cli_doctor.py  test_downloader_split.py  test_export_mt4.py  test_fetch_tickvault.py  test_quantdb_fallback.py  test_rate_limiter.py  test_tickterial_modules.py  test_validation_cli.py  test_validation_failures.py  test_writer.py  test_writer_parse.py
